-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.13.0, Lustre 2.14.0, Lustre 2.12.4
-
3
-
9223372036854775807
This issue was created by maloo for wangshilong <wshilong@ddn.com>
This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/6dacfae4-c5b9-11e9-90ad-52540065bddc
test_4a failed with the following error:
create after timer expired, but expect EDQUOT
<<Please provide additional information about the failure here>>
VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
sanity-quota test_4a - create after timer expired, but expect EDQUOT